# MeshTepologyRefactor

./: .clang-tidy  .clangd  .gitignore  .iwyu.imp  CMakeLists.txt  CMakePresets.json  README.md
cmake/: cmake.h.in  iwyu.cmake  utils.cmake
example/: main.cpp
include/: mesh_io.h  mesh_structure.h  mesh_tepology_refactor.h
libs/tqdm-cpp/: README.md  examples.cpp  tqdm.hpp
src/: mesh_io.cpp  mesh_tepology_refactor.cpp
